<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_title" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_title"/>

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"/>

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast"/>

    <Button
        android:id="@+id/btn_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent"/>

    <Button
        android:id="@+id/btn_date_utils"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateutils"/>
</LinearLayout>
